[package]
name = "octoflow"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
femme = "2.2.1"
log = { version = "0.4.21", features = ["kv"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
text_io = "0.1.12"
tokio = { version = "1.38.0", features = ["full"] }
xz2 = "0.1.7"
